--- a/Class-6/my-react-app/src/App.css
+++ b/Class-6/my-react-app/src/App.css
@@ -1,13 +1,39 @@
-.tile{
-  fill: red;
-}
-
-svg{
+svg {
   border: 3px solid black;
-  width: 400px;
+  width: 800px;
   height: 600px;
 }
-
-.player{
-  fill:lightgoldenrodyellow
+ 
+.tile {
+  fill: red;
+}
+ 
+.player {
+  fill: lightgoldenrodyellow;
+  transition: transform 500ms;
+}
+ 
+.selected {
+  outline: 1px solid red;
+}
+ 
+.opt-container {
+  display: flex;
+  flex-direction: column;
+}
+ 
+.options {
+  flex: 1;
+}
+ 
+.option {
+  width: 40px;
+  height: 40px;
+}
+ 
+#container {
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+  gap: 40px;
 }
